--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,6 +56,18 @@
                                       <li><a class="dropdown-item" href="/core/blendschedule/all">All Blends</a></li>
                                     </ul>
                                 </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Prod Issue Sheet
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                      <li><a class="dropdown-item" href="/core/issuesheet/INLINE">INLine</a></li>
+                                      <li><a class="dropdown-item" href="/core/issuesheet/PDLINE">PD Line</a></li>
+                                      <li><a class="dropdown-item" href="/core/issuesheet/JBLINE">JB Line</a></li>
+                                      <li><hr class="dropdown-divider"></li>
+                                      <li><a class="dropdown-item" href="/core/issuesheet/all">All Lines</a></li>
+                                    </ul>
+                                </li>
                             <!---admin nav link only appears if an admin is logged in-->
                                 {% if user.is_staff %}
                                 <li class="nav-item">    
