create prodverse app & improve blend scheduling

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,8 +50,9 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                       <li><a class="dropdown-item" href="/core/blendschedule/Desk1">Desk 1</a></li>
                                       <li><a class="dropdown-item" href="/core/blendschedule/Desk2">Desk 2</a></li>
-                                      <li><a class="dropdown-item" href="/core/blendschedule/Horix">Horix</a></li>
-                                      <li><a class="dropdown-item" href="/core/blendschedule/DmTotePail">Drums, Totes, Pails</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/Hx">Horix</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/Dm">Drums</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/Totes">Totes</a></li>
                                       <li><hr class="dropdown-divider"></li>
                                       <li><a class="dropdown-item" href="/core/blendschedule/all">All Blends</a></li>
                                     </ul>
