--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -1,32 +1,377 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+    {% if blend_area == 'all' %}
     
-    <h1>Blend Schedule for {{ blend_area }}</h1>
-    <br>
-    <div class="table-responsive-sm">
-        <table class="table text-left table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Blend</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Lot Number</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Totes Needed</th>
-                    <th scope="col">Blend Area</th>
-                </tr>
-            </thead>
-            {% for item in scheduledBlendsThisArea %}
-                <tr>
-                    <td>{{ item.blend_pn }}</td>
-                    <td>{{ item.description }}</td>
-                    <td>{{ item.lot_id }}</td>
-                    <td>{{ item.quantity|floatformat:1 }} gal</td>
-                    <td>{{ item.totes_needed|floatformat:0 }}</td>
-                    <td>{{ item.blend_area }}</td>
-                    <td>{{ item.blendStatus }}</td>
-                </tr>
-            {% endfor %}
-        </table>
-    </div>
+        <h1>Blend Schedules for All Areas</h1>
+        <br>
+        <br>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    Horix Line
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <div class="table-responsive-sm">
+                        <table class="table text-left table-bordered">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Bill No.</th>
+                                    <th scope="col">PO No.</th>
+                                    <th scope="col">Blend</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Total Blend Qty</th>
+                                    <th scope="col"># of Blends</th>
+                                    <th scope="col">Run Date</th>
+                                </tr>
+                            </thead>
+                            {% for item in hxBlends %}
+                                <tr>
+                                    <td>{{ item.pn }}</td>
+                                    <td>{{ item.po_field }}</td>
+                                    <td>{{ item.blend }}</td>
+                                    <td>{{ item.product }}</td>
+                                    <td>{{ item.gallonqty }}</td>
+                                    <td>{{ item.num_blends }}</td>
+                                    <td>{{ item.run_date|date:"M d, Y" }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Drums
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <div class="table-responsive-sm">
+                        <table class="table text-left table-bordered">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Bill No.</th>
+                                    <th scope="col">PO No.</th>
+                                    <th scope="col">Blend</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Total Blend Qty</th>
+                                    <th scope="col"># of Blends</th>
+                                    <th scope="col">Run Date</th>
+                                </tr>
+                            </thead>
+                            {% for item in dmBlends %}
+                                <tr>
+                                    <td>{{ item.pn }}</td>
+                                    <td>{{ item.po_field }}</td>
+                                    <td>{{ item.blend }}</td>
+                                    <td>{{ item.product }}</td>
+                                    <td>{{ item.gallonqty }}</td>
+                                    <td>{{ item.num_blends }}</td>
+                                    <td>{{ item.run_date|date:"M d, Y" }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Totes
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <div class="table-responsive-sm">
+                        <table class="table text-left table-bordered">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Bill No.</th>
+                                    <th scope="col">PO No.</th>
+                                    <th scope="col">Blend</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Total Blend Qty</th>
+                                    <th scope="col"># of Blends</th>
+                                    <th scope="col">Run Date</th>
+        
+                                </tr>
+                            </thead>
+                            {% for item in toteBlends %}
+                                <tr>
+                                    <td>{{ item.pn }}</td>
+                                    <td>{{ item.po_field }}</td>
+                                    <td>{{ item.blend }}</td>
+                                    <td>{{ item.product }}</td>
+                                    <td>{{ item.gallonqty }}</td>
+                                    <td>{{ item.num_blends }}</td>
+                                    <td>{{ item.run_date|date:"M d, Y" }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            
+
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                    Desk 1
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse show" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <div class="table-responsive-sm">
+                        <table class="table text-left table-bordered">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Blend</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Lot Number</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Totes Needed</th>
+                                    <th scope="col">Blend Area</th>
+                                </tr>
+                            </thead>
+                            {% for item in desk1Blends %}
+                                <tr>
+                                    <td>{{ item.blend_pn }}</td>
+                                    <td>{{ item.description }}</td>
+                                    <td>{{ item.lot_id }}</td>
+                                    <td>{{ item.quantity|floatformat:1 }} gal</td>
+                                    <td>{{ item.totes_needed|floatformat:0 }}</td>
+                                    <td>{{ item.blend_area }}</td>
+                                    <td>{{ item.blendStatus }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                        </div>
+                    </div>
+                </div>
+                </div>
+          
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFive">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    Desk 2
+                </button>
+              </h2>
+              <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <div class="table-responsive-sm">
+                        <table class="table text-left table-bordered">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Blend</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Lot Number</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Totes Needed</th>
+                                    <th scope="col">Blend Area</th>
+                                </tr>
+                            </thead>
+                            {% for item in desk2Blends %}
+                                <tr>
+                                    <td>{{ item.blend_pn }}</td>
+                                    <td>{{ item.description }}</td>
+                                    <td>{{ item.lot_id }}</td>
+                                    <td>{{ item.quantity|floatformat:1 }} gal</td>
+                                    <td>{{ item.totes_needed|floatformat:0 }}</td>
+                                    <td>{{ item.blend_area }}</td>
+                                    <td>{{ item.blendStatus }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+            
+
+
+            
+
+            
+
+            
+            
+
+            
+            
+        
+
+
+
+
+
+
+
+
+    {% else %}
+        {% if blend_area == 'Desk1' %}
+            <h1>Blend Schedule for Desk 1</h1>
+            <br>
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Blend</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Lot Number</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Totes Needed</th>
+                            <th scope="col">Blend Area</th>
+                        </tr>
+                    </thead>
+                    {% for item in desk1Blends %}
+                        <tr>
+                            <td>{{ item.blend_pn }}</td>
+                            <td>{{ item.description }}</td>
+                            <td>{{ item.lot_id }}</td>
+                            <td>{{ item.quantity|floatformat:1 }} gal</td>
+                            <td>{{ item.totes_needed|floatformat:0 }}</td>
+                            <td>{{ item.blend_area }}</td>
+                            <td>{{ item.blendStatus }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+
+        {% elif blend_area == 'Desk2' %}
+            <h1>Blend Schedule for Desk 2</h1>
+            <br>
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Blend</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Lot Number</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Totes Needed</th>
+                            <th scope="col">Blend Area</th>
+                        </tr>
+                    </thead>
+                    {% for item in desk2Blends %}
+                        <tr>
+                            <td>{{ item.blend_pn }}</td>
+                            <td>{{ item.description }}</td>
+                            <td>{{ item.lot_id }}</td>
+                            <td>{{ item.quantity|floatformat:1 }} gal</td>
+                            <td>{{ item.totes_needed|floatformat:0 }}</td>
+                            <td>{{ item.blend_area }}</td>
+                            <td>{{ item.blendStatus }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        {% elif blend_area == 'Hx' %}
+            <h1>Blend Schedule for Horix Line</h1>
+            <br>
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Bill No.</th>
+                            <th scope="col">PO No.</th>
+                            <th scope="col">Blend</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Total Blend Qty</th>
+                            <th scope="col"># of Blends</th>
+                            <th scope="col">Run Date</th>
+
+                        </tr>
+                    </thead>
+                    {% for item in hxBlends %}
+                        <tr>
+                            <td>{{ item.pn }}</td>
+                            <td>{{ item.po_field }}</td>
+                            <td>{{ item.blend }}</td>
+                            <td>{{ item.product }}</td>
+                            <td>{{ item.gallonqty }}</td>
+                            <td>{{ item.num_blends }}</td>
+                            <td>{{ item.run_date|date:"M d, Y" }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        {% elif blend_area == 'Dm' %}
+            <h1>Blend Schedule for Drums</h1>
+            <br>
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Bill No.</th>
+                            <th scope="col">PO No.</th>
+                            <th scope="col">Blend</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Total Blend Qty</th>
+                            <th scope="col"># of Blends</th>
+                            <th scope="col">Run Date</th>
+
+                        </tr>
+                    </thead>
+                    {% for item in dmBlends %}
+                        <tr>
+                            <td>{{ item.pn }}</td>
+                            <td>{{ item.po_field }}</td>
+                            <td>{{ item.blend }}</td>
+                            <td>{{ item.product }}</td>
+                            <td>{{ item.gallonqty }}</td>
+                            <td>{{ item.num_blends }}</td>
+                            <td>{{ item.run_date|date:"M d, Y" }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        {% elif blend_area == 'Totes' %}
+            <h1>Blend Schedule for Totes</h1>
+            <br>
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Bill No.</th>
+                            <th scope="col">PO No.</th>
+                            <th scope="col">Blend</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Total Blend Qty</th>
+                            <th scope="col"># of Blends</th>
+                            <th scope="col">Run Date</th>
+
+                        </tr>
+                    </thead>
+                    {% for item in toteBlends %}
+                        <tr>
+                            <td>{{ item.pn }}</td>
+                            <td>{{ item.po_field }}</td>
+                            <td>{{ item.blend }}</td>
+                            <td>{{ item.product }}</td>
+                            <td>{{ item.gallonqty }}</td>
+                            <td>{{ item.num_blends }}</td>
+                            <td>{{ item.run_date|date:"M d, Y" }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        {% endif %}
+    {% endif %}
 {% endblock content %}
