--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -203,26 +203,6 @@
           </div>
 
 
-            
-
-
-            
-
-            
-
-            
-            
-
-            
-            
-        
-
-
-
-
-
-
-
 
     {% else %}
         {% if blend_area == 'Desk1' %}
@@ -238,6 +218,8 @@
                             <th scope="col">Quantity</th>
                             <th scope="col">Totes Needed</th>
                             <th scope="col">Blend Area</th>
+                            <th scope="col">When Entered</th> 
+                            <th scope="col">Manage</th> 
                         </tr>
                     </thead>
                     {% for item in desk1Blends %}
@@ -248,7 +230,23 @@
                             <td>{{ item.quantity|floatformat:1 }} gal</td>
                             <td>{{ item.totes_needed|floatformat:0 }}</td>
                             <td>{{ item.blend_area }}</td>
-                            <td>{{ item.blendStatus }}</td>
+                            <td>{{ item.when_entered }}</td>
+                            <td>
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Manage Blend...
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><a class="dropdown-item" href="/core/mngReq/moveupone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Up 1</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/movedownone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Down 1</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/movetotop/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Top</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/movetobottom/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Bottom</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/delete/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Delete</a></li>
+
+                                    </ul>
+                                </div>
+                                </a>
+                            </td>
                         </tr>
                     {% endfor %}
                 </table>
