--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -1,43 +1,56 @@
+
+
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>The Test Page</h1>
-<div>
-    <h2>All INLINE Runs</h2>
-    <div class="table-responsive-sm">
-        <table class="table text-left table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Bill No.</th>
-                    <th scope="col">Blend</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">RunQty</th>
-                    <th scope="col">QtyOnHand</th>
-                    <th scope="col">Lot 1</th>
-                    <th scope="col">Lot 2</th>
-                    <th scope="col">Lot 3</th>
-                    <th scope="col">Lot 4</th>
-                    <th scope="col">Lot 5</th>
-                    <th scope="col">Lot 6</th>
-                </tr>
-            </thead>
-            {% for run in inLineRunsQS %}
-                <tr>
-                    <td>{{ run.bill_pn }}</td>
-                    <td>{{ run.blend_pn }}</td>
-                    <td>{{ run.blend_desc }}</td>
-                    <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
-                    <td>{{ run.qtyonhand|floatformat:2 }}</td>
-                    <td>{% if run.batchnum1 == "n/a" %} - {% else %} <b>{{ run.batchnum1 }}</b>: {{ run.batchqty1 }} gal{% endif %}</td>
-                    <td>{% if run.batchnum2 == "n/a" %} - {% else %} <b>{{ run.batchnum2 }}</b>: {{ run.batchqty2 }} gal{% endif %}</td>
-                    <td>{% if run.batchnum3 == "n/a" %} - {% else %} <b>{{ run.batchnum3 }}</b>: {{ run.batchqty3 }} gal{% endif %}</td>
-                    <td>{% if run.batchnum4 == "n/a" %} - {% else %} <b>{{ run.batchnum4 }}</b>: {{ run.batchqty4 }} gal{% endif %}</td>
-                    <td>{% if run.batchnum5 == "n/a" %} - {% else %} <b>{{ run.batchnum5 }}</b>: {{ run.batchqty5 }} gal{% endif %}</td>
-                    <td>{% if run.batchnum6 == "n/a" %} - {% else %} <b>{{ run.batchnum6 }}</b>: {{ run.batchqty6 }} gal{% endif %}</td>
-                </tr>
-            {% endfor %}
-        </table>
-    </div>
-    
-</div>
+{{ prodLine }}
+    {% for item in thisLineRunsQS %}
+        <div>
+            <div class='headerdiv'><h2>BLENDING ISSUE SHEET</h2></div>
+            <div class='wholepage'><p>DATE: {{ issueDate }}</p></div>
+            <div class='wholepage'><p>LINE: {{ prodLine }}</p></div>
+            <div class='wholepage'><p>PRODUCT: {{ item.blend_pn }} - {{ item.blend_desc }}</p></div>
+            <br>
+            
+            <div class='onethird'><p>BATCH: {{ item.batchnum1 }}</p></div>
+            <div class='onethird'><p>BATCH: {{ item.batchnum2 }}</p></div>
+            <div class='onethird'><p>BATCH: {{ item.batchnum3 }}</p></div>
+            <br>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty1 }}</p></div>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty2 }}</p></div>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty3 }}</p></div>
+            <br>
+
+            <div class='wholepage'></p>BLENDER: Parker Medlin</p></div>
+            <br>
+
+            <div> <p>RUN: </p><div> 
+            <p>OUT</p>
+            <p>TO ORDER</p>
+            
+            <div class='longlabel'><p>ADDITIONAL COMMENTS: </p></div>
+            <br>
+            <br>
+            <br>
+
+            <div class='onethird'><p>BATCH: {{ item.batchnum4 }}</p></div>
+            <div class='onethird'><p>BATCH: {{ item.batchnum5 }}</p></div>
+            <div class='onethird'><p>BATCH: {{ item.batchnum6 }}</p></div>
+            <br>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty4 }}</p></div>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty5 }}</p></div>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqtY6 }}</p></div>
+            <br>
+            <br>
+            <div class='onethird'><p>BATCH: {{ item.batchnum7 }}</p></div>
+            <div class='onethird'><p>BATCH: {{ item.batchnum8 }}</p></div>
+            <div class='onethird'><p>BATCH: {{ item.batchnum9 }}</p></div>
+            <br>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty7 }}</p></div>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqty8 }}</p></div>
+            <div class='onethird'><p>GAL ISSUED: {{ item.batchqtY9 }}</p></div>
+
+        </div>
+        <p style="page-break-before: always">
+    {% endfor %}
 {% endblock content %}
