populate testpage and rename batchissuetable

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,14 +59,14 @@
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Prod Issue Sheet
+                                        Batch Issue Table
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                      <li><a class="dropdown-item" href="/core/issuesheet/INLINE">INLine</a></li>
-                                      <li><a class="dropdown-item" href="/core/issuesheet/PDLINE">PD Line</a></li>
-                                      <li><a class="dropdown-item" href="/core/issuesheet/JBLINE">JB Line</a></li>
+                                      <li><a class="dropdown-item" href="/core/batchIssueTable/INLINE">INLine</a></li>
+                                      <li><a class="dropdown-item" href="/core/batchIssueTable/PDLINE">PD Line</a></li>
+                                      <li><a class="dropdown-item" href="/core/batchIssueTable/JBLINE">JB Line</a></li>
                                       <li><hr class="dropdown-divider"></li>
-                                      <li><a class="dropdown-item" href="/core/issuesheet/all">All Lines</a></li>
+                                      <li><a class="dropdown-item" href="/core/batchIssueTable/all">All Lines</a></li>
                                     </ul>
                                 </li>
                             <!---admin nav link only appears if an admin is logged in-->
