--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -144,6 +144,7 @@
                                     <th scope="col">Quantity</th>
                                     <th scope="col">Totes Needed</th>
                                     <th scope="col">Blend Area</th>
+                                    <th scope="col">Manage</th>
                                 </tr>
                             </thead>
                             {% for item in desk1Blends %}
@@ -154,7 +155,22 @@
                                     <td>{{ item.quantity|floatformat:1 }} gal</td>
                                     <td>{{ item.totes_needed|floatformat:0 }}</td>
                                     <td>{{ item.blend_area }}</td>
-                                    <td>{{ item.blendStatus }}</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                                Manage Blend...
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                <li><a class="dropdown-item" href="/core/mngReq/moveupone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Up 1</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/movedownone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Down 1</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/movetotop/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Top</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/movetobottom/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Bottom</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/delete/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Delete</a></li>
+        
+                                            </ul>
+                                        </div>
+                                        </a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                         </table>
@@ -182,6 +198,7 @@
                                     <th scope="col">Quantity</th>
                                     <th scope="col">Totes Needed</th>
                                     <th scope="col">Blend Area</th>
+                                    <th scope="col">Manage</th>
                                 </tr>
                             </thead>
                             {% for item in desk2Blends %}
@@ -192,7 +209,22 @@
                                     <td>{{ item.quantity|floatformat:1 }} gal</td>
                                     <td>{{ item.totes_needed|floatformat:0 }}</td>
                                     <td>{{ item.blend_area }}</td>
-                                    <td>{{ item.blendStatus }}</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                                Manage Blend...
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                <li><a class="dropdown-item" href="/core/mngReq/moveupone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Up 1</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/movedownone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Down 1</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/movetotop/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Top</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/movetobottom/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Bottom</a></li>
+                                                <li><a class="dropdown-item" href="/core/mngReq/delete/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Delete</a></li>
+        
+                                            </ul>
+                                        </div>
+                                        </a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                         </table>
@@ -265,6 +297,7 @@
                             <th scope="col">Quantity</th>
                             <th scope="col">Totes Needed</th>
                             <th scope="col">Blend Area</th>
+                            <th scope="col">Manage</th>
                         </tr>
                     </thead>
                     {% for item in desk2Blends %}
@@ -276,6 +309,22 @@
                             <td>{{ item.totes_needed|floatformat:0 }}</td>
                             <td>{{ item.blend_area }}</td>
                             <td>{{ item.blendStatus }}</td>
+                            <td>
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Manage Blend...
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><a class="dropdown-item" href="/core/mngReq/moveupone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Up 1</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/movedownone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Down 1</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/movetotop/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Top</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/movetobottom/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Bottom</a></li>
+                                        <li><a class="dropdown-item" href="/core/mngReq/delete/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Delete</a></li>
+
+                                    </ul>
+                                </div>
+                                </a>
+                            </td>
                         </tr>
                     {% endfor %}
                 </table>
