Standardize naming conventions.

--- a/app/core/templates/core/blendthese.html
+++ b/app/core/templates/core/blendthese.html
@@ -21,7 +21,7 @@
                 {% endif %}
             </tr>
         </thead>
-        {% for item in blendlist %}
+        {% for item in blend_these_queryset %}
             <tr>
                 <td>{{ item.blend_pn }}</td>
                 <td>{{ item.blend_desc }}</td>
