Clarify variable&function names.Update convention.

--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -29,7 +29,7 @@
                                     <th scope="col">Run Date</th>
                                 </tr>
                             </thead>
-                            {% for item in hxBlends %}
+                            {% for item in horix_blends %}
                                 <tr>
                                     <td>{{ item.pn }}</td>
                                     <td>{{ item.po_field }}</td>
@@ -67,7 +67,7 @@
                                     <th scope="col">Run Date</th>
                                 </tr>
                             </thead>
-                            {% for item in dmBlends %}
+                            {% for item in drum_blends %}
                                 <tr>
                                     <td>{{ item.pn }}</td>
                                     <td>{{ item.po_field }}</td>
@@ -107,7 +107,7 @@
         
                                 </tr>
                             </thead>
-                            {% for item in toteBlends %}
+                            {% for item in tote_blends %}
                                 <tr>
                                     <td>{{ item.pn }}</td>
                                     <td>{{ item.po_field }}</td>
@@ -147,7 +147,7 @@
                                     <th scope="col">Manage</th>
                                 </tr>
                             </thead>
-                            {% for item in desk1Blends %}
+                            {% for item in desk_one_blends %}
                                 <tr>
                                     <td>{{ item.blend_pn }}</td>
                                     <td>{{ item.description }}</td>
@@ -201,7 +201,7 @@
                                     <th scope="col">Manage</th>
                                 </tr>
                             </thead>
-                            {% for item in desk2Blends %}
+                            {% for item in desk_two_blends %}
                                 <tr>
                                     <td>{{ item.blend_pn }}</td>
                                     <td>{{ item.description }}</td>
@@ -254,7 +254,7 @@
                             <th scope="col">Manage</th> 
                         </tr>
                     </thead>
-                    {% for item in desk1Blends %}
+                    {% for item in desk_one_blends %}
                         <tr>
                             <td>{{ item.blend_pn }}</td>
                             <td>{{ item.description }}</td>
@@ -300,7 +300,7 @@
                             <th scope="col">Manage</th>
                         </tr>
                     </thead>
-                    {% for item in desk2Blends %}
+                    {% for item in desk_two_blends %}
                         <tr>
                             <td>{{ item.blend_pn }}</td>
                             <td>{{ item.description }}</td>
@@ -346,7 +346,7 @@
 
                         </tr>
                     </thead>
-                    {% for item in hxBlends %}
+                    {% for item in horix_blends %}
                         <tr>
                             <td>{{ item.pn }}</td>
                             <td>{{ item.po_field }}</td>
@@ -376,7 +376,7 @@
 
                         </tr>
                     </thead>
-                    {% for item in dmBlends %}
+                    {% for item in drum_blends %}
                         <tr>
                             <td>{{ item.pn }}</td>
                             <td>{{ item.po_field }}</td>
@@ -406,7 +406,7 @@
 
                         </tr>
                     </thead>
-                    {% for item in toteBlends %}
+                    {% for item in tote_blends %}
                         <tr>
                             <td>{{ item.pn }}</td>
                             <td>{{ item.po_field }}</td>
