Update lookup item fail action

--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -52,7 +52,8 @@
                         })
                             .fail(function() { // err handle
                                 console.log("Part Number field is blank or not found");
-                                $('#noreallywtfisit').text("uhhh")
+                                $('#noreallywtfisit').text("uhhh");
+                                $('#howfuckinmuch').text("Part Number field is blank or not found");
                             })
                     },
                     select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
@@ -67,7 +68,8 @@
                         })
                             .fail(function() { // err handle
                                 console.log("Part Number field is blank or not found");
-                                $('#noreallywtfisit').text("uhhh")
+                                $('#noreallywtfisit').text("uhhh");
+                                $('#howfuckinmuch').text("Part Number field is blank or not found");
                             })
                     },
             
