--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -5,7 +5,7 @@
 {% block title %}<title>Lookup Item</title>{% endblock %}
 
 {% block scripts %} 
-
+<link rel="apple-touch-icon" sizes="128x128" href="{% static 'core\kpkhomescrico.png' %}">
 {% endblock scripts %}
 
 
