--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block title %}<title>Lot Numbers</title>{% endblock %}
+
 
 {% block content %}
 <h1>Lot Numbers</h1>
@@ -18,9 +21,10 @@
                     <th scope="col">Quantity</th>
                     <th scope="col">Date</th>
                     <th scope="col">Scheduling</th>
+                    <th scope="col">Blend Sheet</th>
                 </tr>
             </thead>
-            {% for item in lot_num_queryset %}
+            {% for item in current_page.object_list %}
                 <tr>
                     <td>{{ item.part_number }}</td>
                     <td>{{ item.description }}</td>
@@ -39,8 +43,22 @@
                         </div>
                         </a>
                     </td>
+                    <td>
+                        <button class="btn btn-secondary" href="/core/blendsheet/{{ item.lot_number }}">
+                            <a href="/core/blendsheet/{{ item.lot_number }}">Blend Sheet</a>
+                        </button>
+                    </td>
                 </tr>
             {% endfor %}
         </table>
     </div>
+    <div id="page-links">
+        {% if current_page.has_previous %}
+            <a href="/core/lotnumrecords/?page={{ current_page.previous_page_number }}">Previous Page</a>
+        {% endif %}
+        {% if current_page.has_next %}
+            <a href="/core/lotnumrecords/?page={{ current_page.next_page_number }}">Next Page</a>
+        {% endif %}
+    </div>
+
 {% endblock content %}
