--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -1,81 +1,63 @@
-
-
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}<title>Upcoming Blends</title>{% endblock %}
-{% block scripts %}<link rel="stylesheet" type="text/css" href ="{% static 'core/issuesheets.css' %}">{% endblock %}
+{% block title %}<title>Lot Numbers</title>{% endblock %}
+
 
 {% block content %}
-<h1>Select Blends to Count</h1>
-<br>
-<button id="create_list">Create Count List</button>
-<br>
-<div id="selection_table" class="table-responsive-sm">
-    <table class="table text-left table-bordered">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Count?</th>
-                <th scope="col">Blend</th>
-                <th scope="col">Description</th>
-                <th scope="col">Start Time</th>
-                <th scope="col">Exp. Qty</th>
-                <th scope="col">Last Count</th>
-                <th scope="col">Last Transaction</th>
-                <th scope="col">Shortage</th>
-                <th scope="col">Report</th>
-            </tr>
-        </thead>
-        {% for item in upcoming_blends %}
-            <tr>
-                <td id="cb">
-                    <input type="checkbox" name={{ item.blend_pn }}></input>
-                </td>
-                <td>{{ item.blend_pn }}</td>
-                <td>{{ item.blend_desc }}</td>
-                <td>{{ item.starttime|floatformat:2 }}</td>
-                <td>{{ item.expected_on_hand|floatformat:2 }}</td>
-                <td>{{ item.last_count|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
-                <td>{{ item.last_transaction_type }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
-                <td>
-                    {% if item.short_hour == 0 %}
-                        No
-                    {% else %}
-                        {{ item.short_hour|floatformat:2 }}
-                    {% endif %}
-                </td>
-                <td>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            Select
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="/core/reports">Lot Numbers</a></li>
-                            <li><a class="dropdown-item" href="/core/reports">All Upcoming Runs</a></li>
-                            <li><a class="dropdown-item" href="/core/reports">Transaction History</a></li>
-                            <li><a class="dropdown-item" href="/core/reports">Count History</a></li>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-</div>
-<script>
-    // https://stackoverflow.com/questions/1287592/get-checkbox-list-values-with-jquery
-    $(document).ready(function() {
-        $('#create_list').click(function() {
-            let part_numbers = [];
-            $('td input:checked').each(function() {
-                part_numbers.push($(this).attr("name"));
-            });
-            console.log(part_numbers)
-            // https://stackoverflow.com/questions/4505871/good-way-to-serialize-a-list-javascript-ajax
-            let encoded_list = btoa(JSON.stringify(part_numbers));
-            console.log(encoded_list)
-            base_url = window.location.href.split('core')[0];
-            // https://stackoverflow.com/questions/503093/how-do-i-redirect-to-another-webpage
-            window.location.replace(base_url + "core/countlist/add/"+encoded_list)
-        });
-    });
-</script>
+<h1>Lot Numbers</h1>
+    <div>
+        <a href="/core/lotnumform">
+            <button class="btn btn-secondary">New Lot Number</button>
+        </a>
+        <br/><br/> 
+    </div>
+    <div class="table-responsive-sm">
+        <table class="table text-left table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Blend</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Lot_Number</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Scheduling</th>
+                </tr>
+            </thead>
+            {% for item in current_page.object_list %}
+                <tr>
+                    <td>{{ item.part_number }}</td>
+                    <td>{{ item.description }}</td>
+                    <td>{{ item.lot_number }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ item.date_created|date:"M d, Y" }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                Schedule For...
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk1">Desk 1</a></li>
+                                <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk2">Desk 2</a></li>
+                            </ul>
+                        </div>
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+    <div id="page-links">
+        {% if current_page.has_previous %}
+            <a href="/core/testpage/?page={{ current_page.previous_page_number }}">Previous</a>
+        {% endif %}
+        <a href="/core/testpage/?page={{ current_page.next_page_number }}">{{ current_page.number }}</a>
+        <a href="/core/testpage/?page={{ current_page.next_page_number }}">{{ current_page.next_page_number }}</a>
+        <a href="/core/testpage/?page={{ current_page.next_page_number|add:"1" }}">{{ current_page.next_page_number|add:"1" }}</a>
+        <a href="/core/testpage/?page={{ current_page.next_page_number|add:"2" }}">{{ current_page.next_page_number|add:"2" }}</a>
+        <a href="/core/testpage/?page={{ current_page.next_page_number|add:"3" }}">{{ current_page.next_page_number|add:"3" }}</a>
+        {% if current_page.has_next %}
+            <a href="/core/testpage/?page={{ current_page.next_page_number }}">Next</a>
+        {% endif %}
+    </div>
+
 {% endblock content %}
