--- a/app/core/templates/core/upcomingblndcounts.html
+++ b/app/core/templates/core/upcomingblndcounts.html
@@ -1,54 +1,81 @@
+
+
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}<title>Upcoming Blends</title>{% endblock %}
+{% block scripts %}<link rel="stylesheet" type="text/css" href ="{% static 'core/issuesheets.css' %}">{% endblock %}
 
 {% block content %}
-    <div class='text-center'>
-        <h1>Upcoming Counts Needed</h1>
-        <br/><br/> 
-    </div>
-    <table class="table text-left table-bordered" id="upcoming-cts-tbl">
+<h1>Select Blends to Count</h1>
+<br>
+<button id="create_list">Create Count List</button>
+<br>
+<div id="selection_table" class="table-responsive-sm">
+    <table class="table text-left table-bordered">
         <thead class="thead-dark">
             <tr>
+                <th scope="col">Count?</th>
                 <th scope="col">Blend</th>
                 <th scope="col">Description</th>
                 <th scope="col">Start Time</th>
-                <th scope="col">Line</th>
-                <th scope="col">Exp OH</th>
-                <th scope="col">Count</th>
+                <th scope="col">Exp. Qty</th>
                 <th scope="col">Last Count</th>
-                <th scope="col">Last Ct Date</th>
-                <th scope="col">Last Txn</th>
-                <th scope="col">Delete Row</th>
+                <th scope="col">Last Transaction</th>
+                <th scope="col">Shortage</th>
+                <th scope="col">Report</th>
             </tr>
         </thead>
-        {% for item in upcoming_counts %}
-            
+        {% for item in upcoming_blends %}
             <tr>
+                <td id="cb">
+                    <input type="checkbox" name={{ item.blend_pn }}></input>
+                </td>
                 <td>{{ item.blend_pn }}</td>
                 <td>{{ item.blend_desc }}</td>
                 <td>{{ item.starttime|floatformat:2 }}</td>
-                <td>{{ item.prodline }}</td>
-                <td>{{ item.expected_on_hand|floatformat:1 }}</td>
-                <td></td>
-                {% if item.lastCtDate < item.last_transaction_date %}
-                    <td style="background-color:#cc933e">{{ item.last_count }}</td>
-                    <td style="background-color:#cc933e">{{ item.last_count_date|date:"m-d-y" }}</td>
-                    <td style="background-color:#cc933e">{{ item.last_transaction_type }}, {{ item.last_transaction_date|date:"m-d-y" }} </td>
-                {% else %}
-                    <td>{{ item.last_count }}</td>
-                    <td>{{ item.last_count_date|date:"m-d-y" }}</td>
-                    <td>{{ item.last_transaction_type }}, {{ item.last_transaction_date|date:"m-d-y" }} </td>
-                {% endif %}    
-                <td align="center">
-                    <button class="btnDelete">delet</button>
+                <td>{{ item.expected_on_hand|floatformat:2 }}</td>
+                <td>{{ item.last_count|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
+                <td>{{ item.last_transaction_type }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
+                <td>
+                    {% if item.short_hour == 0 %}
+                        No
+                    {% else %}
+                        {{ item.short_hour|floatformat:2 }}
+                    {% endif %}
+                </td>
+                <td>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Select
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="/core/reports">Lot Numbers</a></li>
+                            <li><a class="dropdown-item" href="/core/reports">All Upcoming Runs</a></li>
+                            <li><a class="dropdown-item" href="/core/reports">Transaction History</a></li>
+                            <li><a class="dropdown-item" href="/core/reports">Count History</a></li>
+                        </ul>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
     </table>
-
+</div>
 <script>
-    $("#upcoming-cts-tbl").on('click', '.btnDelete', function () {
-        $(this).closest('tr').remove();
+    // https://stackoverflow.com/questions/1287592/get-checkbox-list-values-with-jquery
+    $(document).ready(function() {
+        $('#create_list').click(function() {
+            let part_numbers = [];
+            $('td input:checked').each(function() {
+                part_numbers.push($(this).attr("name"));
+            });
+            console.log(part_numbers)
+            // https://stackoverflow.com/questions/4505871/good-way-to-serialize-a-list-javascript-ajax
+            let encoded_list = btoa(JSON.stringify(part_numbers));
+            console.log(encoded_list)
+            base_url = window.location.href.split('core')[0];
+            // https://stackoverflow.com/questions/503093/how-do-i-redirect-to-another-webpage
+            window.location.replace(base_url + "core/countlist/add/"+encoded_list)
+        });
     });
 </script>
 {% endblock content %}
