--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -4,13 +4,13 @@
 
 
 {% block content %}
-<h1>Lot Numbers</h1>
-    <div>
+    <div class='text-center'>
+        <h1>Lot Numbers</h1>
         <a href="/core/lotnumform">
             <button class="btn btn-secondary">New Lot Number</button>
         </a>
-        <br/><br/> 
     </div>
+    <br/><br/>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
             <thead class="thead-dark">
@@ -44,8 +44,8 @@
                         </a>
                     </td>
                     <td>
-                        <button class="btn btn-secondary" href="/core/blendsheet/{{ item.lot_number }}">
-                            <a href="/core/blendsheet/{{ item.lot_number }}">Blend Sheet</a>
+                        <button class="btn btn-secondary" href="/core/blendsheet/{{ item.lot_number }}">Blend Sheet
+                            <a href="/core/blendsheet/{{ item.lot_number }}"></a>
                         </button>
                     </td>
                 </tr>
